--- a/Day-3-Azure-Storage/file-upload/fileupload-node-ts-api/tsconfig.json
+++ b/Day-3-Azure-Storage/file-upload/fileupload-node-ts-api/tsconfig.json
@@ -1,11 +1,15 @@
 {
     "compilerOptions": {
-      "module": "commonjs",  // Corrected for Node.js compatibility
-      "moduleResolution": "node",  // Corrected for Node.js resolution
-      "target": "ES2023",  // Assuming you want the latest ECMAScript features
-      "sourceMap": false,  // Disables source maps (optional, adjust as needed)
-      "outDir": "dist",  // Output directory for compiled JavaScript files
-      "strict": true  // Enables strict type checking
+      "module": "commonjs",
+      "moduleResolution": "node",
+      "target": "ES2023",
+      "sourceMap": false,
+      "outDir": "./dist",
+      "strict": true,
+      "esModuleInterop": true,
+      "resolveJsonModule": true,
+      "skipLibCheck": true,
+      "forceConsistentCasingInFileNames": true
     },
     "include": [
       "src/**/*.ts"  // Includes all TypeScript files in the src directory
