--- a/Day-3-Azure-Storage/file-upload/fileupload-node-ts-api/.prettierrc
+++ b/Day-3-Azure-Storage/file-upload/fileupload-node-ts-api/.prettierrc
@@ -1,11 +1,12 @@
 {
-    "singleQuote":true,
+    "singleQuote": true,
     "printWidth": 150,
-    "tabWidth": 4,
     "proseWrap": "always",
+    "tabWidth": 4,
     "useTabs": false,
     "trailingComma": "none",
     "bracketSpacing": true,
-    "jsxBracketSemicolon": false,
+    "jsxBracketSameLine": false,
     "semi": true
-}
+  }
+  
