--- a/Day-3-Azure-Storage/file-upload/fileupload-node-ts-api/package.json
+++ b/Day-3-Azure-Storage/file-upload/fileupload-node-ts-api/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "main": "src/server.ts",
   "scripts": {
-    "build": "tsc",
-    "start": "ts-node-dev src/server.ts",
-    "start:dev": "npm run build && node dist/server.js",
-    "start:staging": "npm run build && node dist/server.js",
-    "start:prod": "npm run build && node dist/server.js",
+    "start": "ts-node-dev --respawn --transpileOnly src/server.ts",
+    "start:dev": "tsc && node --env-file=.env.development dist/server.js",
+    "start:staging": "tsc && node --env-file=.env.staging dist/server.js",
+    "start:prod": "tsc && node --env-file=.env.production node dist/server.js",
     "test": "jest --config jest.config.ts --detectOpenHandles --coverage --maxWorkers=1",
-    "docker:build": "docker build -t fileupload-node-ts-api .",
-    "docker:run": "docker run -p 3000:3000 --env-file .env.$NODE_ENV fileupload-node-ts-api"
+    "docker:build": "docker build -t your-api-name .",
+    "docker:run:dev": "docker run -p 3000:3000 --env-file .env.development your-api-name",
+    "docker:run:staging": "docker run -p 3000:3000 --env-file .env.staging your-api-name",
+    "docker:run:prod": "docker run -p 3000:3000 --env-file .env.production your-api-name"
   },
   "keywords": [],
   "author": "",
@@ -18,13 +19,14 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "reflect-metadata": "^0.2.2",
-    "ts-node": "^10.9.2"
+    "express": "^4.19.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.14.10",
+    "jest": "^29.7.0",
     "typescript": "^5.5.3"
   }
 }
