--- a/Day-3-Azure-Storage/file-upload/fileupload-node-ts-api/tsconfig.json
+++ b/Day-3-Azure-Storage/file-upload/fileupload-node-ts-api/tsconfig.json
@@ -1,20 +1,20 @@
 {
     "compilerOptions": {
+      "target": "es2023",
       "module": "commonjs",
       "moduleResolution": "node",
-      "target": "ES2023",
-      "sourceMap": false,
-      "outDir": "./dist",
       "strict": true,
+      "noImplicitAny": true,
       "esModuleInterop": true,
-      "resolveJsonModule": true,
-      "skipLibCheck": true,
-      "forceConsistentCasingInFileNames": true
+      "allowSyntheticDefaultImports": true,
+      "sourceMap": true,
+      "outDir": "dist",
+      "forceConsistentCasingInFileNames": true 
     },
     "include": [
-      "src/**/*.ts"  // Includes all TypeScript files in the src directory
+      "src/**/*.ts"
     ],
     "exclude": [
-      "node_modules"  // Excludes the node_modules directory
+      "node_modules"
     ]
   }
