--- a/Day-3-Azure-Storage/file-upload/fileupload-node-ts-api/package.json
+++ b/Day-3-Azure-Storage/file-upload/fileupload-node-ts-api/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@azure/storage-blob": "^12.23.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   },
