--- a/Day-3-Azure-Storage/file-upload/fileupload-node-ts-api/package.json
+++ b/Day-3-Azure-Storage/file-upload/fileupload-node-ts-api/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "src/server.ts",
   "scripts": {
-    "start": "ts-node-dev --respawn --transpileOnly src/server.ts",
+    "start": "ts-node-dev --respawn --transpile-only src/server.ts",
     "start:dev": "tsc && node --env-file=.env.development dist/server.js",
     "start:staging": "tsc && node --env-file=.env.staging dist/server.js",
     "start:prod": "tsc && node --env-file=.env.production node dist/server.js",
@@ -28,6 +28,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.10",
     "jest": "^29.7.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.3"
   }
 }
