--- a/Day-3-Azure-Storage/file-upload/fileupload-node-ts-api/package.json
+++ b/Day-3-Azure-Storage/file-upload/fileupload-node-ts-api/package.json
@@ -29,6 +29,8 @@
     "@types/node": "^20.14.10",
     "jest": "^29.7.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0"
   }
 }
