--- a/Day-3-Azure-Storage/file-upload/fileupload-node-ts-api/package.json
+++ b/Day-3-Azure-Storage/file-upload/fileupload-node-ts-api/package.json
@@ -20,17 +20,19 @@
   "dependencies": {
     "@azure/storage-blob": "^12.23.0",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/jest": "^29.5.12",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.14.10",
     "jest": "^29.7.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.3",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0"
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.5.3"
   }
 }
